# Tablet-Visualizer

./: .gitmodules  CMakeLists.txt  Cursor.hpp  EmbedWinIcon.hpp  README.md  Settings.json  TrailCircle.hpp  Visualizer.hpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-multi-platform.yml
src/: Cursor.cpp  Icon.rc  Main.cpp  TrailCircle.cpp  Visualizer.cpp
